Add draft through split

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,9 +14,10 @@
     "## Agenda\n",
     "\n",
     "1. Explain what bias, variance, and error are in the context of statistical modeling\n",
-    "2. Explain how bias, variance and error are related via the bias-variance tradeoff\n",
-    "3. Explain how a holdout set can be used to evaluate a model\n",
-    "4. Use a test set to estimate model bias, variance and error\n",
+    "2. Defining Error: prediction error and irreducible error\n",
+    "3. Define prediction error as a combination of bias and variance\n",
+    "4. Explore the bias-variance tradeoff\n",
+    "5. Train-test split\n",
     "\n"
    ]
   },
@@ -55,13 +56,15 @@
    "source": [
     "# What is a “Model”?\n",
     "\n",
-    " - A “model” is a general specification of relationships among variables and parameters.\n",
-    "E.G. Linear regression, or \n",
+    " - A “model” is a general specification of relationships among variables. E.G. Linear Regression:\n",
     "\n",
     "$$\\Large Price = \\beta_1 X_1 + \\beta_0 + \\epsilon$$\n",
     "\n",
-    " - A “trained model” is a particular model with parameters estimated using some training data.\n",
-    "\n"
+    " - Each model makes assumptions about how the variables interact. \n",
+    " - A 'trained model' operates on these assumptions to learn from how best to interact with training data.\n",
+    " - In linear regression, the learning results in a set of parameters that define the best fit linear equation.\n",
+    " - The higher the quality of learning form this training data, the more precicely the model will reflect the real world process the data was generated from.\n",
+    " - The model will then perform more accurately on unseen samples.\n"
    ]
   },
   {
@@ -69,16 +72,32 @@
    "metadata": {},
    "source": [
     "# Remember Expected Value?\n",
-    "\n",
     "- The expected value of a quantity is the weighted average of that quantity across all possible samples\n",
     "\n",
     "![6 sided die](https://media.giphy.com/media/sRJdpUSr7W0AiQ3RcM/giphy.gif)\n",
-    "- The expected value of a 6-sided die is:"
+    "\n",
+    "- for a 6 sided die, another way to think about the expected value is the arithmetic mean of the rolls of a very large number of independent samples.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The expected value of a 6-sided die is:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -87,12 +106,14 @@
        "3.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#__SOLUTION__\n",
+    "\n",
     "probs = 1/6\n",
     "rolls = range(1,7)\n",
     "\n",
@@ -115,11 +136,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining Error\n",
+    "# 2. Defining Error: prediction error and irreducible error\n",
     "\n",
-    "There are 3 types of prediction error: bias, variance, and irreducible error.\n",
     "\n",
-    "$Total Error = Prediction\\ Error+ Irreducible\\ Error$\n",
+    "\n",
+    "### Regression fit statistics are often called “error”\n",
+    " - Sum of Squared Errors (SSE)\n",
+    " - Mean Squared Error (MSE) \n",
+    " \n",
+    " Both are calculated using residuals\n",
+    "\n",
+    "![residuals](img/residuals.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This error can be broken up into parts:\n",
+    "\n",
+    "$Total Error = Residual = Prediction\\ Error+ Irreducible\\ Error$\n",
     "\n",
     "![defining error](img/defining_error.png)"
    ]
@@ -128,50 +164,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$Total Error = Residual = Prediction\\ Error+ Irreducible\\ Error$\n",
-    "> For regression, “error” usually refers to prediction error or to residuals <br>Prediction errors are approximated by residuals\n",
+    "There will always be some random, irreducible error inherent in the data.  Real data always has noise.\n",
     "\n",
-    "### Regression fit statistics are often called “error”\n",
-    " - Sum of Squared Errors (SSE)\n",
-    " - Mean Squared Error (MSE) \n",
-    "     - Calculated using residuals\n"
+    "The goal of modeling is to reduce the prediction error, which is the difference between our model and the realworld processes from which our data is generated."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![residuals](img/residuals.png)"
+    "# 3. Define prediction error as a combination of bias and variance\n",
+    "\n",
+    "Our prediction error can be further broken down into error due to bias and error due to variance.\n",
+    "\n",
+    "$\\Large Prediction\\ Error = Model\\ Bias^2 + Model\\ Variance $\n",
+    "\n",
+    "So our total error can be thought of as a combination of bias, variance, and irriducile error.\n",
+    "\n",
+    "$\\Large Total Error = Model\\ Bias^2 + Model\\ Variance + Irreducible\\ Error$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Explain how bias, variance and error are related via the bias-variance tradeoff\n",
+    "**Model Bias** is the expected prediction error from your expected trained model\n",
     "\n",
+    "> In other words, if you were to train multiple models on different samples, what would be the average prediction error.\n",
     "\n",
-    "**Let's do a thought experiment:**\n",
+    "**Model Variance** is the expected variation in predictions, relative to your expected trained model\n",
     "\n",
-    "1. Imagine you've collected 5 different training sets for the same problem.\n",
-    "2. Now imagine using one algorithm to train 5 models, one for each of your training sets.\n",
+    "> In other words, it is a measure of how much your model varies for any given point.\n",
+    "\n",
+    "**Let's do a thought experiment:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Thought Experiment\n",
+    "\n",
+    "1. Imagine you've collected 23 different training sets for the same problem.\n",
+    "2. Now imagine using one algorithm to train 23 models, one for each of your training sets.\n",
     "3. Bias vs. variance refers to the accuracy vs. consistency of the models trained by your algorithm.\n",
     "\n",
     "![target_bias_variance](img/target.png)\n",
     "\n",
-    "http://scott.fortmann-roe.com/docs/BiasVariance.html"
+    "http://scott.fortmann-roe.com/docs/BiasVariance.html\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining Model Bias and Variance\n",
-    "\n",
-    "**Model Bias** is the expected prediction error from your expected trained model\n",
-    "\n",
-    "**Model Variance** is the expected variation in predictions, relative to your expected trained model\n",
-    "\n",
+    "# 4.  Explore Bias Variance Tradeoff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**High bias** algorithms tend to be less complex, with simple or rigid underlying structure.\n",
     "\n",
     "+ They train models that are consistent, but inaccurate on average.\n",
@@ -180,19 +234,32 @@
     "On the other hand, **high variance** algorithms tend to be more complex, with flexible underlying structure.\n",
     "\n",
     "+ They train models that are accurate on average, but inconsistent.\n",
-    "+ These include non-linear or non-parametric algorithms such as decision trees and nearest neighbors."
+    "+ These include non-linear or non-parametric algorithms such as decision trees and nearest neighbors.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "While we build our models, we have to keep this relationship in mind.  If we build complex models, we risk overfitting our models.  Their predictions will vary greatly when introduced to new data.  If our models are too simple, the predictions as a whole will be inaccurate.   \n",
+    "\n",
+    "The goal is to build a model with enough complexity to be accurate, but not too much complexity to be erratic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![optimal](img/optimal_bias_variance.png)\n",
+    "http://scott.fortmann-roe.com/docs/BiasVariance.html\n",
+    "\n",
     "### Let's take a look at our familiar King County housing data. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +482,7 @@
        "1954400510           1800        7503  "
       ]
      },
-     "execution_count": 334,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,26 +528,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "low variance sample mean mean 30465617209.508102\n",
-      "low variance sample mean variance 3.4940984923692687e+18\n"
+      "low variance sample mean mean 213324.0264883605\n",
+      "low variance sample mean variance 72481195.82350436\n"
      ]
     }
    ],
    "source": [
-    "print(f'low variance sample mean mean {np.mean(sample_means_low_var)}')\n",
-    "print(f'low variance sample mean variance {np.var(sample_means_low_var)}')"
+    "print(f'low variance sample mean mean {np.mean(low_var_rmse)}')\n",
+    "print(f'low variance sample mean variance {np.var(low_var_rmse)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +907,7 @@
        "[10 rows x 137 columns]"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,41 +959,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "low variance mean 211983.81781738673\n",
-      "low variance variance 205032983.53003398\n",
-      "High variance mean 157307.0655871797\n",
-      "High variance variance 286694300.50911325\n"
+      "lo variance mean 213324.0264883605\n",
+      "Hi variance mean 157307.0655871797\n",
+      "lo variance variance 72481195.82350436\n",
+      "Hi variance variance 286694300.50911325\n"
      ]
     }
    ],
    "source": [
-    "print(f'low variance mean {np.mean(low_var_mse)}')\n",
-    "print(f'low variance variance {np.var(low_var_mse)}')\n",
+    "print(f'lo variance mean {np.mean(low_var_rmse)}')\n",
+    "print(f'Hi variance mean {np.mean(high_var_rmse)}')\n",
     "\n",
-    "print(f'High variance mean {np.mean(high_var_mse)}')\n",
-    "print(f'High variance variance {np.var(high_var_mse)}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\Large Total Error = Model\\ Bias^2 + Model\\ Variance + Irreducible\\ Error$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![optimal](img/optimal_bias_variance.png)\n",
-    "http://scott.fortmann-roe.com/docs/BiasVariance.html"
+    "print(f'lo variance variance {np.var(low_var_rmse)}')\n",
+    "print(f'Hi variance variance {np.var(high_var_rmse)}')"
    ]
   },
   {
@@ -940,7 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train Test Split"
+    "# 5. Train Test Split"
    ]
   },
   {
